--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,12 +3,12 @@
     <div class="four columns">
       <h1>
          <a href="/index.html">
-            <img class="scale-with-grid" src="/images/site/logo-sm.png" alt="Cowork Bloomington - Independent Collaboration">   
+            <img class="scale-with-grid logo" src="/images/site/logo-sm.png" alt="Cowork Bloomington - Independent Collaboration">   
          </a>
       </h1>
     </div><!-- /div.sixteen.columns -->
     <div class="six columns">
-      
+      <img class="right yellow" src="/images/site/by-yellow.png" alt="Yellow">
     </div>
   </div> 
 </div>
