--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
       </h1>
     </div><!-- /div.sixteen.columns -->
     <div class="six columns">
-      <img class="right yellow" src="/images/site/by-yellow.png" alt="Yellow">
+      <img class="yellow" src="/images/site/by-yellow.png" alt="Yellow">
     </div>
   </div> 
 </div>
