--- a/_layouts/default-new.html
+++ b/_layouts/default-new.html
@@ -11,7 +11,7 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <title>Cowork Btown</title>
+  <title>{{site.site_name}}</title>
   
   <!-- Included CSS Files (Uncompressed) -->
   <!--
@@ -55,57 +55,11 @@
 
 <body class="rolecall">
 
-  <div class="container mast-head">
-  <div class="row new">
-    <div class="six columns">
-         <a href="/index.html" class="logo">
-            <img class="scale-with-grid new-logo" src="/images/site/logo-v2.png" alt="Cowork Bloomington - Independent Collaboration">   
-         </a>
-    </div><!-- /div.sixteen.columns -->
-    <div class="six columns">
-      <ul class="pull-right">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="nightowl.html">Events</a></li>
-        <li><a href="rollcall.html">Rollcall</a></li>
-      </ul>
-    </div>
-  </div> 
-</div>
+  {% include header-new.html %}
 
+  {{content}}
 
-
-  <div class="container">
-  <div class="row">
-    <div class="twelve columns">
-      <h3 class="rollcall">Tag your Instagram photos with <strong>#coworkbtown</strong> and they'll show up here.</h3>
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="twelve columns">
-      <ul class="instagram"></ul>
-    </div>
-  </div>
-</div>
-
-  <div class="footer">
-  <div class="row">
-    <div class="twelve columns">
-      <hr>
-    </div>
-  </div>
-  <div class="row">
-    <div class="nine columns">
-      <p>Copyright &#169; 2012. &nbsp;
-        If you have any questions or want to meet we can be reached <a href="mailto:&#97;&#97;&#114;&#111;&#110;&#64;&#99;&#97;&#108;&#108;&#109;&#101;&#97;&#97;&#114;&#111;&#110;&#46;&#99;&#111;&#109;">here</a>.</p>
-    </div>
-    <div class="three columns">
-      
-    </div>
-  </div>
-</div>
+  {% include footer.html %}
 
   <!-- Included JS Files (Uncompressed) -->
   <!--
