--- a/_layouts/default-new.html
+++ b/_layouts/default-new.html
@@ -99,15 +99,21 @@
   <script src="javascripts/app.js"></script>
   <!-- Instagram script -->
   <script src="javascripts/jquery.instagram.js"></script>
+
+
   <script type="text/javascript">
-    $(function() {
-      $(".instagram").instagram({
-          hash: 'coworkbtown'
-        , clientId: '8ddbfe2e4aeb4884bada604c264d7cef'
-        , image_size: 'standard_resolution'
-        , userID: true
+      var feed = new Instafeed({
+      get: 'tagged',
+      tagName: 'coworkbtown',
+      limit: '22',
+      accessToken: '3286182.467ede5.7a49fd4b5b4f437cb320e6b6c2ae1ecb',
+      clientId: '8ddbfe2e4aeb4884bada604c264d7cef',
+      resolution: 'standard_resolution'
       });
-    });
+      feed.run();
+    
   </script>
+
+
 </body>
 </html>
