--- a/_layouts/default-new-space.html
+++ b/_layouts/default-new-space.html
@@ -9,9 +9,9 @@
   <meta charset="utf-8" />
 
   <!-- Set the viewport width to device width for mobile -->
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Cowork Btown</title>
+  <title>{{site.site_name}}</title>
   
   <!-- Included CSS Files (Uncompressed) -->
   <!--
@@ -19,9 +19,9 @@
   -->
   
   <!-- Included CSS Files (Compressed) -->
-  <link rel="stylesheet" href="/stylesheets/foundation.min.css">
-  <link rel="stylesheet" href="/stylesheets/app.css">
-  <link rel="stylesheet" href="/stylesheets/custom.css">
+  <link rel="stylesheet" href="stylesheets/foundation.min.css">
+  <link rel="stylesheet" href="stylesheets/app.css">
+  <link rel="stylesheet" href="stylesheets/custom.css">
 
   <!-- Typkit -->
   <script type="text/javascript" src="//use.typekit.net/sti4yod.js"></script>
@@ -39,67 +39,27 @@
 
   <script type="text/javascript">
 
-   var _gaq = _gaq || [];
-   _gaq.push(['_setAccount', 'UA-1847571-27']);
-   _gaq.push(['_trackPageview']);
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-1847571-27']);
+    _gaq.push(['_trackPageview']);
 
-   (function() {
+    (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+    })();
 
   </script>
 
 </head>
 
-<body class="night-owl-bg img-bg">
+<body id="home" class="new-space">
 
-  <div class="container mast-head">
-  <div class="row new">
-    <div class="six columns">
-         <a href="/index.html" class="logo">
-            <img class="scale-with-grid new-logo" src="/images/site/logo-v2.png" alt="Cowork Bloomington - Independent Collaboration">   
-         </a>
-    </div><!-- /div.sixteen.columns -->
-    <div class="six columns">
-      <ul class="pull-right">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="nightowl.html">Events</a></li>
-        <li><a href="rollcall.html">Rollcall</a></li>
-      </ul>
-    </div>
-  </div> 
-</div>
+  {% include header-new.html %}
 
+  {{content}}
 
-
-  <div>
-  <div class="container text-center">
-    <div class="row">
-      <div class="twelve column">
-        <img src="images/site/night-owls-logo-white.png" alt="Night Owls">
-      </div>
-    </div>  
-  <div class="row l-white-bg">
-    <div class="eight offset-by-two columns">
-      <h3>beer + snacks + music + camaraderie</h3>
-      <p>Stop by after work for a night of nerd! Cowork Btown will have beer, snacks, music, and camaraderie. Take the opportunity to share what you’ve been working on, learn more about Bloomington happenings, and/or tackle a side project.</p>
-
-      <p>Come and stay the whole time or just drop in to say hello.</p>
-      <p>&nbsp;</p>
-
-
-
-      <h4>TBD</h4>
-      <p><small><a href="">Cowork Btown Office - 408 South Walnut Street</a></small></p>
-      <p><a href="http://www.formstack.com/forms/?1576766-dbLnXJ2ISr" class="btn primary">RSVP</a></p>
-
-      
-    </div><!-- /div.row -->
-  </div>
-</div>
-
+  {% include footer.html %}
 
   <!-- Included JS Files (Uncompressed) -->
   <!--
@@ -137,18 +97,5 @@
   
   <!-- Initialize JS Plugins -->
   <script src="javascripts/app.js"></script>
-
-  <!-- Instagram script -->
-  <script src="javascripts/jquery.instagram.js"></script>
-  <script type="text/javascript">
-    $(function() {
-      $(".instagram").instagram({
-          hash: 'coworkbtown'
-        , clientId: '8ddbfe2e4aeb4884bada604c264d7cef'
-        , image_size: 'standard_resolution'
-        , userID: true
-      });
-    });
-  </script>
 </body>
 </html>
