--- a/_includes/header-new-dark.html
+++ b/_includes/header-new-dark.html
@@ -2,7 +2,7 @@
   <div class="row new">
     <div class="six columns">
          <a href="/index.html" class="logo">
-            <img class="scale-with-grid new-logo" src="/images/site/logo-white.png" alt="Cowork Bloomington - Independent Collaboration">   
+            <img class="scale-with-grid new-logo" src="/images/site/logo-dark.png" alt="Cowork Bloomington - Independent Collaboration">   
          </a>
     </div><!-- /div.sixteen.columns -->
     <div class="six columns">
