--- a/_includes/header-new.html
+++ b/_includes/header-new.html
@@ -8,7 +8,7 @@
     <div class="six columns">
       <ul class="pull-right">
         <li><a href="/index.html">Home</a></li>
-        <li><a href="events.html">Events</a></li>
+        <li><a href="http://www.meetup.com/Independent-Bloomington/">Events</a></li>
         <li><a href="rollcall.html">Rollcall</a></li>
       </ul>
     </div>
